--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,6 @@ repositories {
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     compile "org.java-websocket:Java-WebSocket:1.5.1"
+    compile files("libs/ezlogger.jar")
+
 }
